syntax = "proto3";
package chain4energy.c4echain.cfetokenization;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfetokenization/types";

message UserDevices {
  string owner = 1;
  repeated UserDevice devices = 2;
}

message UserDevice {
  string device_address = 1;
  string name = 2;
}

message PendingDevice {
  string device_address = 1;
  string user_address = 2;
}

message Device {
  string device_address = 1;
  repeated Measurement measurements = 2;
}

message Measurement {
  google.protobuf.Timestamp timestamp = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  uint64 value = 2;
}